--- a/src/AdventExtension.fsproj
+++ b/src/AdventExtension.fsproj
@@ -1,11 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="..\paket-files\nojaf\fable-jest\fable\Bindings.fs">
+      <Paket>True</Paket>
+      <Link>Jest/Bindings.fs</Link>
+    </Compile>
+    <Compile Include="..\paket-files\nojaf\fable-jest\fable\Exports.fs">
+      <Paket>True</Paket>
+      <Link>Jest/Exports.fs</Link>
+    </Compile>
+    <Compile Include="..\paket-files\nojaf\fable-jest\fable\Matchers.fs">
+      <Paket>True</Paket>
+      <Link>Jest/Matchers.fs</Link>
+    </Compile>
     <Compile Include="Extension.fs" />
   </ItemGroup>
-
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
