--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "postinstall": "node ./node_modules/vscode/bin/install",
         "build": "fable-splitter --config splitter.config.js",
         "watch": "yarn run build --watch",
-        "test": "node ./node_modules/vscode/bin/test"
+        "test": "jest"
     },
     "devDependencies": {
         "@babel/core": "^7.2.2",
