--- a/src/AdventExtension.fsproj
+++ b/src/AdventExtension.fsproj
@@ -16,6 +16,7 @@
       <Paket>True</Paket>
       <Link>Jest/Matchers.fs</Link>
     </Compile>
+    <Compile Include="Parser.test.fs" />
     <Compile Include="Extension.fs" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
